<?xml version="1.0"?>
<package>
    <name>system_timing</name>
    <version>0.0.0</version>
    <description>
            Logs system event times
    </description>

    <author>Iris Automation Engineering Team</author>
    <maintainer email="engineering@irisonboard.com">Iris Automation Engineering Team</maintainer>
    <license>Restricted, private use in Iris Automation only.</license>
    <url>http://www.irisonboard.com</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>iris_common</build_depend>

    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>cmake_modules</run_depend>
    <run_depend>std_msgs</run_depend>
</package>